/*
 * $Id: ChangeLog,v 1.940 2003/04/10 16:54:52 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-04-10 14:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * CVS files are tagged as Build80

2003-04-10 09:49 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    + Added excess space removal to CommandStuff()

  * makefile.bc
    * Removed -D__EXPORT__ from default flags.

   - tests/tst.prg
     - Removed non used file.

2003-04-09 16:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * CVS files are tagged as Build80
  * include/hbver.h
  * updated

2003-04-09 16:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/debug/debugger.prg
    ! Fix to make more compatible with new tbrowse class
  * source/rtl/tbrowse.prg
    ! Added ::Acoluns Data that is an copy of ::aColsinfo Data(this data is hidden) for debugger work properly

2003-04-09 15:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
  * makefile.vc
  * make_vc.bat
    !MT and Non-MT libs always built.
    ! once more with feeling...

2003-04-09 16:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rdd/dbfntx/dbfntx1.c
    ! Borrow some fix from harbour

2003-04-09 19:04 UTC+0100 Ian Anderson <i.anderson@procon-online.de>
  * contrib\rdd_ads\adsfunc.c
    + Added support for AdsCacheRecords(), this allows you
      to specify how many records to read ahead when doing a
      skip, and gives significant performance benefit

2003-04-09 13:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * include/hbver.h
    ! change build number to 80 as Ron
    ! change ChangeLog entries

2003-04-09 09:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
  * makefile.vc
  * make_vc.bat
    ! MT and Non-MT libs and exes always built.

2003-04-09 12:45 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>